<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"/>

    <View
        android:layout_below="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_down"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:padding="26dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="45dp"
            android:padding="10dp"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_emailid"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <EditText
            android:id="@+id/login_password"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_pwd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Student"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/student_checkbox1"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="Parent"
                android:textSize="16sp"
                android:id="@+id/parent_checkbox1"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="Teacher"
                android:textSize="16sp"
                android:id="@+id/teacher_checkbox1"
                />
        </LinearLayout>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:padding="3dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/login_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/newUser"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/login_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimary" />
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/ic_wave"
        android:layout_above="@+id/view"/>


</RelativeLayout>